# Payment-Application-Project

./: CMakeLists.txt  Payment Application Project.vcxproj  Payment Application Project.vcxproj.filters  README.md
Application/: app.c  app.h
Card/: card.c  card.h
Server/: server.c  server.h
Terminal/: terminal.c  terminal.h
x64/Debug/: Payment Application Project.exe.recipe  Payment Application Project.ilk  vc143.idb
x64/Debug/Payment .c5e264af.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Payment Application Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
